platform/deployment/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-app
  labels:
    name: devops-app
    managed-by: kustomize
