platform/deployment/kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-app-service
  namespace: devops-app
  labels:
    app: devops-app
spec:
  type: NodePort
  selector:
    app: devops-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
